syntax = "proto3";

option java_package = "com.haberdashervcs.common.protobuf";
option java_outer_classname = "CommitsProto";
option java_multiple_files = false;


message CommitEntry {
    string branchName = 1;
    int64 commitId = 2;
    string author = 3;
    string message = 4;
}
